# supply-chain

./: .gitignore  README.md
.bcr/package_metadata/: metadata.template.json
.github/workflows/: release_metadata.yml  release_prep.sh  release_tools.yml
docs/metadata/: defs.md
docs/metadata/purl/: purl.md
enhance_http_tools/: BUILD  MODULE.bazel
enhance_http_tools/private/: BUILD  http.bzl  http_test.bzl
enhanced_http_tools/: MODULE.bazel  defs.bzl
enhanced_http_tools/examples/golangci_lint/: BUILD  metadata_test.bzl
enhanced_http_tools/private/: http.bzl  http_test.bzl
enhanced_http_tools_examples/: BUILD  MODULE.bazel  metadata_test.bzl
enhanced_http_tools_examples/gofumpt/: BUILD
enhanced_http_tools_examples/golangci_lint/: BUILD
examples/: .bazelrc  BUILD  MODULE.bazel  README.md  gazelle_rules_go_060.patch  hermetic_llvm_package_metadata.patch  rules_python_runtime_sbom.patch  toolchain_sbom_test.bzl
examples/hermetic_llvm/: BUILD  defs.bzl  hello.c  llvm_libc_sbom_test.py
examples/pr818/: BUILD  test.bzl
examples/python/: BUILD  greeting.py  hello_python.py  message_format.py
examples/toolchains/: BUILD
external_packages/bar/: BUILD  MODULE.bazel  bar_binary.bzl  bar_library.bzl
external_packages/bar/toolchains/: BUILD  bar_toolchain.bzl
lib/supplychain-go/: BUILD  MODULE.bazel  go.mod  go.sum  rules_go_stdlib_sbom.patch
lib/supplychain-go/cmd/cyclonedx/: BUILD.bazel  cyclonedx.go  cyclonedx_test.go
lib/supplychain-go/cmd/spdx/: spdx.go
lib/supplychain-go/internal/sbom/: genconfig.go
maintainers/tools/purl_spec_tests/: main.py
metadata/: MODULE.bazel  defs.bzl
metadata/providers/: BUILD  package_metadata_sbom_info.bzl
metadata/purl/: extensions.bzl  purl.bzl
metadata/purl/private/: BUILD  builder.bzl  parser.bzl
metadata/purl/private/normalization/: BUILD  bitbucket.bzl  composer.bzl  github.bzl  huggingface.bzl  mlflow.bzl  normalization.bzl  pypi.bzl
metadata/purl/private/percent_encoding/: percent_encoding.bzl
metadata/purl/private/strings/: BUILD  ascii.bzl  bytes.bzl  bytes_test.bzl  chrord.bzl  strings.bzl
metadata/purl/private/tests/: spec.bzl  spec.custom.bzl  test.bzl
metadata/purl/private/validation/: BUILD  chrome_extension.bzl  cpan.bzl  julia.bzl  otp.bzl  swift.bzl  validation.bzl  vscode_extension.bzl
registry/: bazel_registry.json
registry/modules/bar/1.0.0/: MODULE.bazel  source.json
tests/: BUILD  purl_test.bzl
tools/: BUILD  MODULE.bazel
tools/gather_metadata/: BUILD  core.bzl  extensions.bzl  gather_metadata.bzl  providers.bzl
tools/sbom/: BUILD  cyclonedx.bzl  gather_sbom.bzl  providers.bzl  sbom.bzl  spdx.bzl
