module(
    name = "supply_chain_examples",
    version = "0.0.1",
)

# Do not update to newer versions until you need a specific new feature.
bazel_dep(name = "package_metadata", version = "0.0.5")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "supply-chain-go", version = "0.0.6")
bazel_dep(name = "supply_chain_tools", version = "0.0.1")

# Development tools
local_path_override(
    module_name = "package_metadata",
    path = "../metadata",
)

local_path_override(
    module_name = "supply-chain-go",
    path = "../lib/supplychain-go",
)

local_path_override(
    module_name = "supply_chain_tools",
    path = "../tools",
)

local_path_override(
    module_name = "rules_license",
    path = "../rules_license",
)

bazel_dep(name = "rules_python", version = "1.9.0", dev_dependency = True)
bazel_dep(name = "platforms", version = "1.0.0", dev_dependency = True)
bazel_dep(name = "rules_cc", version = "0.2.17", dev_dependency = True)
bazel_dep(name = "rules_go", version = "0.60.0", dev_dependency = True)
bazel_dep(name = "gazelle", version = "0.47.0", dev_dependency = True)

single_version_override(
    module_name = "gazelle",
    version = "0.47.0",
    patches = ["//:gazelle_rules_go_060.patch"],
    patch_strip = 1,
)

single_version_override(
    module_name = "rules_go",
    patches = ["//:rules_go_stdlib_sbom.patch"],
    patch_strip = 1,
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.2")

#
bazel_dep(name = "bar", version = "1.0.0")

register_toolchains(
    "@bar//toolchains:all",
)
