module(
    name = "supply_chain_examples",
    version = "0.0.1",
)

# Do not update to newer versions until you need a specific new feature.
bazel_dep(name = "package_metadata", version = "0.0.5")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "bazel_features", version = "1.51.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "supply-chain-go", version = "0.0.6")
bazel_dep(name = "supply_chain_tools", version = "0.0.1")
bazel_dep(name = "llvm", version = "0.8.11")
bazel_dep(name = "with_cfg.bzl", version = "0.14.6")

# Development tools
local_path_override(
    module_name = "package_metadata",
    path = "../metadata",
)

local_path_override(
    module_name = "supply-chain-go",
    path = "../lib/supplychain-go",
)

local_path_override(
    module_name = "supply_chain_tools",
    path = "../tools",
)

local_path_override(
    module_name = "rules_license",
    path = "../rules_license",
)

bazel_dep(name = "rules_python", version = "1.9.0", dev_dependency = True)
bazel_dep(name = "platforms", version = "1.1.0", dev_dependency = True)
bazel_dep(name = "rules_cc", version = "0.2.20", dev_dependency = True)
bazel_dep(name = "bar", version = "1.0.0", dev_dependency = True)

single_version_override(
    module_name = "llvm",
    patch_strip = 1,
    patches = ["//:hermetic_llvm_package_metadata.patch"],
    version = "0.8.11",
)

llvm_toolchain = use_extension("@llvm//extensions:toolchain.bzl", "toolchain")
llvm_toolchain.exec(
    arch = "x86_64",
    os = "linux",
)
llvm_toolchain.exec(
    arch = "aarch64",
    os = "linux",
)
llvm_toolchain.exec(
    arch = "x86_64",
    os = "macos",
)
llvm_toolchain.exec(
    arch = "aarch64",
    os = "macos",
)
llvm_toolchain.target(
    arch = "x86_64",
    os = "linux",
)
use_repo(llvm_toolchain, "llvm_toolchains")

metadata_toolchain_types = use_extension("@supply_chain_tools//gather_metadata:extensions.bzl", "toolchain_types")
metadata_toolchain_types.register(
    toolchain_types = [
        # TODO: Move this registration to rules_cc once it carries metadata.
        "@bazel_tools//tools/cpp:toolchain_type",
    ],
)
use_repo(metadata_toolchain_types, "supply_chain_gather_metadata_toolchains")

register_toolchains(
    "@bar//toolchains:all",
    "@llvm_toolchains//:all",
)
