module(
    name = "package_metadata",
    version = "",  # Automatically updated by release pipeline.
)

bazel_dep(
    name = "re.bzl",
    version = "0.3.1",
)

purl_types = use_extension("//purl:extensions.bzl", "purl_types")
purl_types.standard_types()
purl_types.overlay(
    type = "cpan",
    component = "namespace_definition",
    permitted_characters = "^[A-Z0-9_-]+$",
)
purl_types.overlay(
    type = "cpan",
    component = "name_definition",
    permitted_characters = "^[^:]+$",
)
purl_types.overlay(
    type = "swift",
    component = "namespace_definition",
    permitted_characters = "^.+/.+$",
)
purl_types.qualifier_overlay(
    type = "maven",
    key = "classifier",
    requirement = "optional",
)
use_repo(purl_types, "purl_type_validation")
