module(
    name = "supply_chain_tools",
    version = "",  # Automatically updated by release pipeline.
)

# Do not update to newer versions until you need a specific new feature.
bazel_dep(name = "package_metadata", version = "0.0.7")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "supply-chain-go", version = "0.0.6")
bazel_dep(name = "bar", version = "1.0.0")

# For development, we use our sibling projects directly.
local_path_override(
    module_name = "package_metadata",
    path = "../metadata",
)

local_path_override(
    module_name = "supply-chain-go",
    path = "../lib/supplychain-go",
)

local_path_override(
    module_name = "rules_license",
    path = "../rules_license",
)
