module(
    name = "supply-chain-go",
    version = "HEAD",  # Automatically updated by release pipeline.
)

bazel_dep(
    name = "package_metadata",
    version = "0.0.6",
)
bazel_dep(
    name = "rules_go",
    version = "0.60.0",
)

single_version_override(
    module_name = "rules_go",
    patches = ["//:rules_go_stdlib_sbom.patch"],
    patch_strip = 1,
)
bazel_dep(
    name = "gazelle",
    version = "0.47.0",
)

single_version_override(
    module_name = "gazelle",
    version = "0.47.0",
    patches = ["//:gazelle_rules_go_060.patch"],
    patch_strip = 1,
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.2")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_cyclonedx_cyclonedx_go",
    "com_github_package_url_packageurl_go",
    "com_github_spdx_tools_golang",
    "com_github_stretchr_testify",
)

local_path_override(
    module_name = "package_metadata",
    path = "../../metadata",
)
