load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "cyclonedx_lib",
    srcs = ["cyclonedx.go"],
    importpath = "github.com/bazel-contrib/supply-chain/lib/supplychain-go/cmd/cyclonedx",
    visibility = ["//visibility:private"],
    deps = [
        "//:supplychain-go",
        "//internal/sbom",
        "@com_github_cyclonedx_cyclonedx_go//:cyclonedx-go",
    ],
)

go_binary(
    name = "cyclonedx",
    embed = [":cyclonedx_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "cyclonedx_test",
    srcs = ["cyclonedx_test.go"],
    embed = [":cyclonedx_lib"],
    deps = [
        "//internal/sbom",
        "@com_github_cyclonedx_cyclonedx_go//:cyclonedx-go",
    ],
)
